--- a/2nd.html
+++ b/2nd.html
@@ -11,11 +11,14 @@
 起司牛舌握壽司，有兩種方式呈現，<br>
 第一個起司牛舌握壽司，上頭刨滿了大量的起司吃，<br>
 不過似乎有點搶走牛舌的風采，覺得普通。<br>
-另一個則是脆餅上放了牛肉跟芽蔥，口感豐富，是不錯的開胃小菜<br><p></td>
+另一個則是脆餅上放了牛肉跟芽蔥，口感豐富，是不錯的開胃小菜<br><p></td><p>
+
+<audio src="001.mp3"autoplay controls></audio><P>
+
 
 <a href="index.html">首頁</a>
 <a href="3nd.html">葡萄蝦沙拉</a>
 <a href="4nd.html">手作冷豆腐</a>
-<a href="5nd.html">心得</a>
+<a href="5nd.html">心得</a><p>
 </body>
 </html>
