--- a/3nd.html
+++ b/3nd.html
@@ -9,13 +9,15 @@
 因為在秋天來吃碳佐麻里，剛好推出了秋季限定的葡萄蝦料理。<br>
 我們選擇了葡萄蝦沙拉，葡萄蝦以刺身的方式呈現，<br>
 淋上油醋、搭配酸豆，直接吃就可以吃到葡萄蝦的原味鮮甜及滑順感。<br>
-擺盤搭配一點生菜，顏色繽紛，放在大器的盤子中，看起來很美。不過生蝦好像不是很多人可以接受的口感，如果不敢吃的千萬不要點喔。<br><p></td>
+擺盤搭配一點生菜，顏色繽紛，放在大器的盤子中，看起來很美。<br>
+不過生蝦好像不是很多人可以接受的口感，如果不敢吃的千萬不要點喔。<br><p></td>
+
+<audio src="001.mp3"autoplay controls></audio><p>
 
 
 <a href="index.html">首頁</a>
 <a href="2nd.html">起司牛舌握壽司</a>
 <a href="4nd.html">手作冷豆腐</a>
-<a href="5nd.html">心得</a>
+<a href="5nd.html">心得</a><p>
 </body>
 </html>
-
