--- a/5nd.html
+++ b/5nd.html
@@ -4,11 +4,12 @@
 </head>
 <body>
 
-上這門課,我是覺得太困難了.我本科是餐飲,突然要我學這個,覺得用不到.<dr>
-但我現在學到怎麼用網頁,是還不錯.但是要我在學,我可能回說不.<dr>
-謝謝老師的耐心教導和通學的幫助,不燃我一定交不出來.<dr>
-反正求穩過,學這堂對我來說有好有壞.<dr><p></td>
+上這門課,我是覺得太困難了.我本科是餐飲,突然要我學這個,覺得用不到.<br>
+但我現在學到怎麼用網頁,是還不錯.但是要我在學,我可能回說不.<br>
+謝謝老師的耐心教導和通學的幫助,不燃我一定交不出來.<br>>
+反正求穩過,學這堂對我來說有好有壞.<br><p></td>
 
+<audio src="001.mp3"autoplay controls></audio><p>
 
 <a href="index.html">首頁</a>
 <a href="2nd.html">起司牛舌握壽司</a>
